--- a/platforms/android/res/layout/main.xml
+++ b/platforms/android/res/layout/main.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, Curious"
-    />
-</LinearLayout>
-
+    android:layout_height="fill_parent">
+    <org.apache.cordova.CordovaWebView 
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:id = "@+id/mainView"/>
+</FrameLayout>
