--- a/www/css/mobile/trackPage.css
+++ b/www/css/mobile/trackPage.css
@@ -55,6 +55,10 @@ button {
 	margin: .1em 0
 }
 
+.ui-dialog-titlebar {
+	height:3em;
+}
+
 .okCancelDiv {
 	text-align:right;
 }
@@ -168,9 +172,8 @@ ul.ui-autocomplete {
 	height: 25px;
 }
 .dateBar {
-	height: 30px;
 	background-color: #f5311e;
-	padding: 0.1em .3em 0.1em .3em;
+	padding: .1em .3em 0em .3em;
 	color: #ffffff;
 	font-weight: bold;
 	text-align: center;
@@ -235,17 +238,6 @@ ul.ui-autocomplete {
 	border-width: 1px 0 0 0;
 	background: transparent;
 	height: 0px;
-}
-
-.dataEntry .showMore {
-	display: block;
-	text-align: right;
-	padding: .7em .1em .6em 0;
-	color: #404040;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: .5em;
 }
 
 .entryDelete {
@@ -361,7 +353,8 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 }
 
 #entry0 li.entry.ghost {
-	color: #A9A9A9;
+	color: #D9D9D9;
+	background-color: #FFFFFF;
 }
 
 #entry0 li.entry a.entryDelete {
