--- a/www/css/mobile/trackPage.css
+++ b/www/css/mobile/trackPage.css
@@ -173,7 +173,7 @@ ul.ui-autocomplete {
 }
 .dateBar {
 	background-color: #f5311e;
-	padding: .1em .3em 0em .3em;
+	padding: 0em .3em;
 	color: #ffffff;
 	font-weight: bold;
 	text-align: center;
@@ -214,7 +214,7 @@ ul.ui-autocomplete {
 	text-align: center;
 	border-color: #18ADEF;
 	border-style: solid;
-	border-width: 0 0 5px 0;
+	border-width: 0 0 0 0;
 	padding: 2px 4%;
 }
 
@@ -224,7 +224,6 @@ ul.ui-autocomplete {
 	font-size: 14px;
 	font-weight: bold;
 	color: #cbcbcb;
-	margin: .7em 0 .7em 0;
 	width: 100%;
 	height: 30px;
 	-webkit-border-radius: 2px;
@@ -289,7 +288,6 @@ ul.ui-autocomplete {
 }
 
 #content {
-	padding-top: 9px;
 }
 
 #datepicker {
@@ -340,6 +338,9 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 	font-weight: bold;
 	margin: 0px;
 	padding: 14px 14px 14px 14px;
+	-webkit-transition: background 1s, color 1s;
+	-moz-transition: background 1s, color 1s;
+	transition: background 1s, color 1s;
 }
 
 #entry0 li.entry input {
@@ -374,4 +375,8 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 
 #entry0 li.entry.ghost a.entryDelete {
 	display: inline;
+}
+#entry0 li.entry.glow {
+	background-color: #413535;
+	color: white;
 }
