Porting swipe to cordova https://github.com/syntheticzero/curious2/issues/178

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -64,9 +64,6 @@ table {
    padding:0px;
 }
 #content {
-   position:absolute;
-   top:85px;
-   bottom:0;
    width:100%;
    padding:0px;
    padding-bottom:20px;   /* Height of the footer */
@@ -80,4 +77,22 @@ table {
 }
 #body {
    height:100%;
+}
+
+#trackPage {
+	width: 100%;
+	position: relative;
+	height: 100%;
+}
+
+.trackDay {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	height: 100%;
+	width: 100%;
+	-moz-box-shadow:    3px 3px 5px 6px #ccc;
+  	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  	box-shadow:         3px 3px 5px 6px #ccc;
+  	z-index: 1;
 }
