--- a/www/css/mobile/trackPage.css
+++ b/www/css/mobile/trackPage.css
@@ -352,7 +352,7 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 	width: 90%
 }
 
-#entry0 li.entry.ghost {
+#entry0 li.entry.ghost:not(.ui-selected) {
 	color: #D9D9D9;
 	background-color: #FFFFFF;
 }
@@ -372,9 +372,18 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 	padding-bottom: 16px;
 }
 
-#entry0 li.entry.ghost a.entryDelete {
+#entry0 li.entry.ghost:not(.remind) a.entryDelete {
 	display: inline;
 }
+
+#entry0 li.entry.continuous a.entryDelete {
+	display: none !important;
+}
+
+#entry0 li.entry.ui-selected a.entryDelete {
+	display: inline !important;
+}
+
 #entry0 li.entry.glow {
 	background-color: #413535;
 	color: white;
