--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,8 @@
+.container {
+	margin-left: 40px;
+	margin-right: 40px;
+	width: auto;
+}
 /* FRAME */
 
 .content-size, .content-size:after, .content-size:before {
@@ -156,40 +161,68 @@ a,a:link,a:hover,a:visited {
 	padding-left:2px;
 }
 #trackmain {
-	height:610px;
+	height:633px;
 }
 /**
  * Styles for graph page starts here.
  */
+body.graph-page #tagListWrapper {
+	min-height: 565px;
+}
+body.graph-page #tagListWrapper ul#tagList {
+	height: 535px;
+}
 body.graph-page .querymain {
 	margin:0px;
 }
 body.graph-page .querymain #plotArea {
 	height:500px;
 }
-body.graph-page #plotArea canvas {
+body.graph-page #plotArea canvas, body.discuss-page #plotDiscussArea canvas {
 	width: 100%;
 	height: 100%;
 }
 body.graph-page .querycontrols {
 	margin:0px;
 }
+body.graph-page div.graphData div#height-balancer {
+	height: 13px;
+}
+body.graph-page div.graphData.has-plot-data div#height-balancer {
+	height: 0px;
+}
 /**
  * Styles for graph page ends here.
  */
+
+/**
+ * Styles for discuss page starts here.
+ */
+body.discuss-page input#discussTitleInput {
+	width: 800px;
+}
+@media (max-width: 970px) {
+	body.discuss-page input#discussTitleInput {
+		width: 100%;
+	}
+}
 .discussmain .cycleTagInput {
 	margin-left:58px;
 }
 .discussmain .discussPlotArea {
 	height:550px;
 }
+/**
+ * Styles for discuss page ends here.
+ */
+
 #dashmain {
 	width:800px;
 }
 #recordList {
 	padding: 4px;
 	overflow: auto;
-	height: 509px;
+	height: 583px;
 }
 /**
  * @Deprecated. Use `.red-header` instead.
@@ -952,16 +985,16 @@ div.plotLine:hover span {
 .entryUnits {
 	color: #5A6263;
 }
-
-.ui-selected .entryDelete {
-	display: block !important;
-}
 .entryDelete {
 	display:none;
 	float:right;
-	padding-top:3px;
+	padding-top:5px;
+	padding-bottom:0px;
 	padding-left:8px;
 	color:#999999;
+}
+.entryModify {
+	cursor:pointer;
 }
 .custom-row {
 	margin-left: -10px;
@@ -1052,6 +1085,9 @@ div.plotLine:hover span {
 .pointer {
 	cursor: pointer;
 }
+.text-danger, a.text-danger, a.text-dager:link {
+	color: #a94442;
+}
 .text-center {
 	text-align: center;
 }
@@ -1107,7 +1143,7 @@ body.track-page #datepicker {
 body.track-page #area0 .panel-wrapper {
 	border-bottom: 0;
 }
-body.track-page ol#entry0 li.entry.ghost {
+body.track-page ol#entry0 li.entry.ghost:not(.ui-selected) {
 	color: #D9D9D9;
 	background-color: #FFFFFF;
 }
@@ -1122,22 +1158,22 @@ li.entry.timedrepeat {
 body.track-page ol#entry0 li.entry.ghost span {
 	color: #D9D9D9;
 }
-body.track-page ol#entry0 li.entry.ghost a.entryDelete {
+body.track-page ol#entry0 li.entry.ghost:not(.remind) a.entryDelete {
 	display: inline;
+}
+body.track-page ol#entry0 li.entry.continuous a.entryDelete {
+	display: none !important;
+}
+body.track-page ol#entry0 li.entry.ui-selected a.entryDelete {
+	display: block !important;
 }
 
 /**
  * Styles for track page for web application. Ends here.
  */
-
-.tags-collapsed-right {
+div.tags-header-container, div.tags-container, body.tags-collapsed div.tags-header-container, body.tags-collapsed div.tags-container {
 	padding-left: 2px;
 }
-.tags-collapsed-left {
+div.entry-header-container, div.graph-header-container, body.tags-displayed div.entry-container, body.tags-displayed div.graph-container {
 	padding-right: 0px;
-}
-.tags-collapsed-left .red-header {
-	box-shadow: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
 }
