Migrating changes from the web-app

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,7 +1,13 @@
+input, optgroup, select, textarea {
+	color: black;
+}
 .container {
 	margin-left: 40px;
 	margin-right: 40px;
 	width: auto;
+}
+ul {
+	margin-bottom: 0;
 }
 /* FRAME */
 
@@ -72,7 +78,7 @@ a,a:link,a:hover,a:visited {
 }
 .bugs a {	
 	display:block;
-	background:url(/static/images/bugs.gif) no-repeat;
+	background:url(/images/bugs.gif) no-repeat;
 	width:19px;
 	height:20px;
 	position:absolute;
@@ -91,24 +97,15 @@ a,a:link,a:hover,a:visited {
 .header {
 	padding:10px 0px 10px 0px;
 }
-#headerlogo {
-	background:url(/static/images/logo_alpha.png) no-repeat;
-	width: 420px;
-	height:30px;
-	display:inline-block;
-	padding:0px 0px 15px 0px;
-	vertical-align:middle;
+.header a.logo-link {
+	margin-bottom: 15px;
+	display: inline-block;
 }
-@media (max-width: 992px) {
-	#headerlogo {
-		width: 180px;
-	}
+.header #headerbutton {
+	display: inline-block;
 }
-#headerbutton {
-	background:url(/static/images/lhpdonate.gif) no-repeat;
-	width:180px;
-	height:60px;
-	display:inline-block;
+.header #headerbutton img {
+	width: 100px;
 }
 .mainLinks {
 	display:inline-block;
@@ -120,6 +117,9 @@ a,a:link,a:hover,a:visited {
 	text-transform:uppercase;
 	font-size:.8em;
 	color:#999999;
+}
+.mainLinks li:first-child {
+	padding-left: 0;
 }
 .mainLinks li.active {
 	font-weight: bold;
@@ -144,15 +144,6 @@ a,a:link,a:hover,a:visited {
 	padding-left:10px;
 	text-decoration:none;
 }
-@media (max-width: 768px) {
-	.mainLinks {
-		padding: 0;
-		display: block;
-	}
-	.mainLinks li:first-child {
-		padding-left: 0;
-	}
-}
 #datepicker {
 	width:250px;
 	font-size:15px;
@@ -166,17 +157,25 @@ a,a:link,a:hover,a:visited {
 /**
  * Styles for graph page starts here.
  */
-body.graph-page #tagListWrapper {
-	min-height: 565px;
+body.graph-page .body1 {
+	position: relative;
 }
 body.graph-page #tagListWrapper ul#tagList {
-	height: 535px;
+	height: 583px;
 }
 body.graph-page .querymain {
-	margin:0px;
+	margin: 0px;
+	width: 100%;
+}
+#plotLeftNav {
+	width: 100%;
+	margin-top: 4px;
 }
 body.graph-page .querymain #plotArea {
 	height:500px;
+}
+body.graph-page .querymain #plotArea canvas {
+	z-index: 2;
 }
 body.graph-page #plotArea canvas, body.discuss-page #plotDiscussArea canvas {
 	width: 100%;
@@ -254,6 +253,8 @@ body.discuss-page input#discussTitleInput {
 }
 .footer h2 {
 	padding-bottom:.7em;
+	font-size: 100%;
+	margin: 0;
 }
 .footer ul {
 	display:block;
@@ -302,9 +303,6 @@ input.textInput {
 }
 .endDate {
 	display:inline-block;
-	float:right;
-}
-.endDate {
 	float:right;
 }
 .endDate a.calendar {
@@ -357,7 +355,9 @@ ul.ui-autocomplete {
 	display:inline-block;
 }
 #searchTags {
-	font-size:.9em;	
+	font-size:.9em;
+	margin-left: -1px;
+	margin-right: -1px;
 }
 #searchTags .grid {
 	float:right;
@@ -369,7 +369,7 @@ ul.ui-autocomplete {
 #searchTags h1 a {
 	color:#000000;
 	padding-left:1.3em;
-	background:url(/static/images/your_tags.gif) no-repeat 0px .2em;	
+	background:url(/images/your_tags.gif) no-repeat 0px .2em;	
 }
 #searchTags input.textInput {
 	width: 100%;
@@ -391,12 +391,11 @@ ul.ui-autocomplete {
 .unstyled {
     list-style: none;
 }
-.hide {
+.hide, .hid {
     display: none;
 }
 ul.tags {
     list-style: none;
-    clear:both;
 }
 ul.tags li {
     margin-bottom: 4px;
@@ -461,11 +460,14 @@ li.treeItemView.highlight {
 ul.tags li.ui-draggable {
     cursor: pointer;
 }
+.draggable-helper {
+	z-index: 99999;
+}
 ul.tags li.tagGroup ul.tags, .wildcardTagGroup ul {
 	margin-left:10px;
 }
 ul#tagList {
-	height: 545px;
+	height: 603px;
 	overflow-y: scroll;
 }
 .leftNav {
@@ -476,16 +478,22 @@ ul#tagList {
 	-webkit-box-shadow: 3px 3px 3px #dddddd;
 	box-shadow: 3px 3px 3px #dddddd;
 }
-#plotLeftNav {
-	height:600px;
+#plotNav {
+	height:60px;
 }
-#plotLinesplotArea {
-	height:600px;
-	overflow:auto;
+.plotlines {
+	height:auto;
 }
-.discussPlotLines {
-	height:600px;
-	overflow:auto;
+.plotlines .ui-droppable {
+	float: left;
+	position: relative;
+	cursor: pointer;
+	margin-right: 4px;
+	margin-bottom: 4px;
+}
+.plotlines .ui-droppable h3 {
+	margin: 0;
+	font-size: 100%;
 }
 
 /* JQUERY UI MODS */
@@ -502,87 +510,47 @@ ul#tagList {
 }
 
 .plotGroup {
-	color: #FFFFFF;
+	background-color: #f1f1f1;
 }
 
-.orange h3.ui-accordion-header {
-	background-color: #ff6633;
+.orange h3 {
+	color: #ff6633;
 }
 
-.eggplant h3.ui-accordion-header {
-	background-color: #990066;
+.eggplant h3 {
+	color: #990066;
 }
 
-.malibu h3.ui-accordion-header {
-	background-color: #5BCDFC;
+.malibu h3 {
+	color: #5BCDFC;
 }
 
-.bostonBlue h3.ui-accordion-header {
-	background-color: #449BAF;
+.bostonBlue h3 {
+	color: #449BAF;
 }
 
-.chardonnay h3.ui-accordion-header {
-	background-color: #fccb88;
+.chardonnay h3 {
+	color: #fccb88;
 }
 
-.roseBud h3.ui-accordion-header {
-	background-color: #f8aeac;
+.roseBud h3 {
+	color: #f8aeac;
 }
 
-.vanilla h3.ui-accordion-header {
-	background-color: #cdb9aa;
+.vanilla h3 {
+	color: #cdb9aa;
 }
 
-.burntSienna h3.ui-accordion-header {
-	background-color: #e8835d;
+.burntSienna h3 {
+	color: #e8835d;
 }
 
-.vistaBlue h3.ui-accordion-header {
-	background-color: #9AD3AE;
+.vistaBlue h3 {
+	color: #9AD3AE;
 }
 
-.chenin h3.ui-accordion-header {
-	background-color: #D5D879;
-}
-
-.orange.ui-accordion {
-	border: 2px solid #ff6633;
-}
-
-.eggplant.ui-accordion {
-	border: 2px solid #990066;
-}
-
-.malibu.ui-accordion {
-	border: 2px solid #5BCDFC;
-}
-
-.bostonBlue.ui-accordion {
-	border: 2px solid #449BAF;
-}
-
-.chardonnay.ui-accordion {
-	border: 2px solid  #fccb88;
-}
-
-.roseBud.ui-accordion {
-	border: 2px solid  #f8aeac;
-}
-
-.vanilla.ui-accordion {
-	border: 2px solid  #cdb9aa;
-}
-
-.burntSienna.ui-accordion {
-	border: 2px solid  #e8835d;
-}
-
-.vistaBlue.ui-accordion {
-	border: 2px solid #9AD3AE;
-}
-
-.chenin.ui-accordion {
-	border: 2px solid #D5D879;
+.chenin h3 {
+	color: #D5D879;
 }
 
 .ui-accordion-header {
@@ -591,7 +559,6 @@ ul#tagList {
 	border-radius: 0;			
 }
 
-.ui-accordion-header.ui-state-default .ui-icon { display:none; }
 
 h3.ui-accordion-header.ui-state-active { background-color: #ffffff !important; }
 .ui-accordion .ui-accordion-header { margin-top:0;}
@@ -616,8 +583,8 @@ h3.ui-accordion-header.ui-state-active { background-color: #ffffff !important; }
 	-moz-box-shadow: 3px 3px 3px #dddddd;
 	-webkit-box-shadow: 3px 3px 3px #dddddd;
 	box-shadow: 3px 3px 3px #dddddd;
-	margin-bottom: 5px;
-	min-height: 608px;
+	border: 1px solid #ccc;
+	border-top: 0;
 }
 
 /* FIRST PAGE */
@@ -632,7 +599,7 @@ body.track-page .date-controls h1 a {
 	float:left;
 }
 body.track-page .date-controls h1 .gear {
-	background:url(/static/images/records_gear.gif);
+	background:url(/images/records_gear.gif);
 	width:15px;
 	height:15px;
 	display:inline-block;
@@ -645,7 +612,7 @@ body.track-page .date-controls #datePicker {
 	text-transform:uppercase;
 }
 a.calendar {
-	background:url(/static/images/calendar.gif) no-repeat;
+	background:url(/images/calendar.gif) no-repeat;
 	width:13px;
 	height:14px;
 	margin:7px 0px 0px 10px;
@@ -655,20 +622,45 @@ a.calendar {
 /* GRAPH PAGE */
 
 .plotlineinfo {
+	width: 195px;
 	font-size:.8em;
+	background: #f9f9f9;
+	border: 1px solid #ccc;
+	padding: 10px;
+	position: absolute;
+	z-index:3;
+	min-width: 155px;
 }
-.graphData #actions {
-	padding:0px 10px;
+.plotlineinfo h4, .plotlineinfo .form-group {
+	margin-bottom: 7px;
+	float: left;
+	clear: left;
 }
-.graphData #actions ul {
-	display:block;
-	border:1px dotted #cccccc;
-	border-width:1px 0px;
+.plotlineinfo ul.tags {
+	margin-top: 15px;
 }
-.graphData #actions li {
-	display:inline;
-	font-size:.8em;
-	padding:2px 15px 2px 0px;
+.plotlineinfo .ui-icon {
+	display: none;
+}
+.plotlineinfo .form-group {
+	clear: left;	
+	width: 100%;
+}
+.plotlineinfo .graph-icon {
+	float: right;
+	width: 60px;
+	margin-left: 10px;
+}
+.plotlineinfo input {
+	float: left;
+	margin-right: 5px;
+}
+.plotlineinfo label {
+	float: left;
+}
+.plotlineinfo .widget {
+	float: left;
+	padding: 17px 0;
 }
 .calendarRange {
 	background-color:#EBEBEB;
@@ -680,7 +672,7 @@ a.calendar {
 	height:30px;
 }
 .calendarRange .slider {
-	background:url(/static/images/slider_bg.gif) center center repeat-x;
+	background:url(/images/slider_bg.gif) center center repeat-x;
 }
 .calendarRange hr {
 	height:1px;
@@ -688,20 +680,30 @@ a.calendar {
 	color:#ffffff;
 	background-color:#ffffff;
 }
-#actions a {
-	color:#000000;
-}
 div.plotGroup {
+	padding: 5px;
 }
 
-span.plotGroup {
-	float:right;
-	padding-left:10px;
-        padding-top:6px;
-	display:none;
+div.plotGroup .delete {
+	display: inline-block;
+    width: 14px;
+	height: 14px;
+	line-height: 11px;
+	color: #f1f1f1;
+	border-radius: 50%;
+	text-align:center;
+	text-decoration:none;
+	background: #d0d6d6;
+	font-weight:bold;
+	font-size: 15px;
 }
-div.plotGroup:hover span {
-	display:inline;
+
+div.plotGroup .edit {
+	padding-right: 2px;
+	display: none;
+}
+div.plotGroup:hover .edit {
+	display: inline-block;
 }
 div.plotLine {
 	padding:2px 5px;
@@ -748,15 +750,17 @@ div.plotLine:hover span {
 	box-shadow: 3px 3px 3px #ffffff;
 }
 .fixed-column {
-	width: 225px;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
+	width: 227px;
+	float: right;
 }
 .floating-column {
 	overflow: hidden;
-	float: none;
-	width: auto;
+}
+body.tags-collapsed .floating-column {
+	width: 100%;
+}
+body.tags-displayed .floating-column {
+	width: calc(100% - 229px);
 }
 #preFooter .tagNav img {
 	vertical-align:middle;
@@ -994,31 +998,69 @@ div.plotLine:hover span {
 	color:#999999;
 }
 .entryModify {
-	cursor:pointer;
+	cursor: pointer;
+	width: 14px;
+	height: 14px;
+	padding-left: 1px;
+	padding-top: 2px;
 }
 .custom-row {
-	margin-left: -10px;
-	margin-right: -10px;
+	padding-right: 10px;
 }
-
 /**
  * Generic & common stuff, useful for every where. Starts here.
  */
 .red-header {
-	-moz-box-shadow: 3px 3px 3px #dddddd;
-	-webkit-box-shadow: 3px 3px 3px #dddddd;
-	box-shadow: 3px 3px 3px #dddddd;
 	background-color: #EF4B3A;
-	padding: 7px 10px;
 	vertical-align: middle;
 	color: #ffffff;
 	text-transform: uppercase;
 	min-height: 34px;
+	width: 100%;
+}
+.red-header .right {
+	float: left;
+	padding: 9px 10px;
+	width: calc(100% - 227px);
+	border-right: 2px solid #fff;
+}
+.tags-container {
+	margin-left: 2px;
 }
 .red-header h1 {
 	font-weight: normal;
 	font-size: .8em;
 	line-height: 20px;
+}
+.red-header #actions {
+	position: relative;
+	height: 15px;
+	float: left;
+	width: 20px;
+}
+.red-header #actions ul {
+	background: #fff;
+	display: block;
+	width: 272px;
+	padding: 10px;
+	z-index: 999;
+	border: 4px solid #d4d8d8;
+	position: absolute;
+	top: 30px;
+	display: none;
+}
+.red-header #actions ul li {
+	cursor: pointer;
+}
+.red-header #actions ul li:hover {
+	background: #f1f1f1;
+}
+.red-header #actions ul li a {
+	color: #879293;
+	font-weight: bold;
+}
+.red-header #actions img {
+	height: 15px;
 }
 .icon-triangle {
 	border-style: solid;
@@ -1113,22 +1155,6 @@ div.plotLine:hover span {
 	text-align: center;
 	vertical-align: middle;
 }
-[class*="span"] {
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px;
-	float: left;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-.span3 {
-	width: 25%;
-}
-.span9 {
-	width: 75%;
-}
 
 /**
  * Generic & common stuff, useful for every where. Ends here.
@@ -1171,9 +1197,145 @@ body.track-page ol#entry0 li.entry.ui-selected a.entryDelete {
 /**
  * Styles for track page for web application. Ends here.
  */
-div.tags-header-container, div.tags-container, body.tags-collapsed div.tags-header-container, body.tags-collapsed div.tags-container {
-	padding-left: 2px;
+.tags-header-container {
+	padding: 7px;
 }
-div.entry-header-container, div.graph-header-container, body.tags-displayed div.entry-container, body.tags-displayed div.graph-container {
-	padding-right: 0px;
+
+div.graph-header-container .red-header {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+/**
+ * Style for community & load page.
+ */
+#graphList #graphItem {
+	clear:both;
+}
+#graphList .summary {
+	padding-top:12px;
+	padding-bottom:12px;
+}
+#graphList .summary .date {
+	font-size: 80%;
+	display: inline-block;
+	width: 9em;
+	color: #666666;
+}
+#graphList .summary h2 {
+	width: 265px;
+	background: url(/images/pointer_right.png) no-repeat center left;
+	padding-left: 25px;
+	font-weight: bold;
+	font-size: 100%;
+	display: inline-block;
+	margin: 0;
+}
+#graphList .summary .userName {
+	width: .6em;
+	font-size: 80%;
+	color: #666666;
+	display: inline-block;
+}
+#graphList .summary .preview {
+	width: 50px;
+	font-size: 80%;
+	padding-bottom: 5px;
+	display: inline-block;
+}
+#graphList .summary .unpublishButton {
+	width: 250px;
+	margin-left: 2px;
+	margin-right: 4px;
+	padding-top: 4px;
+	padding-right: 4px;
+	background-color: #08BBF1;
+	color: #FFFFFF;
+	padding-left: 4px;
+	padding-bottom: 4px;
+	font-size: 16px;
+}
+#graphList .summary .publishButton {
+	width: 250px;
+	margin-left: 2px;
+	margin-right: 4px;
+	padding-top: 4px;
+	padding-right: 4px;
+	background-color: #08BBF1;
+	color: #FFFFFF;
+	padding-left: 4px;
+	padding-bottom: 4px;
+	font-size: 16px;
+}
+#graphList .summary .update {
+	font-size: 80%;
+	display: inline-block;
+	width: 0px;
+	height: 21px;
+	text-align: center;
+	line-height: 21px;
+	color: #ffffff ! important;
+	text-transform: uppercase;
+	background: url(/images/preview_btn.gif) no-repeat
+}
+#graphList .summary .close {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	padding-left: 5px;
+	background: url(/images/x.gif) no-repeat center center;
+}
+#graphList .summary .visibility {
+	color: #AAAAAA;
+	width: 280px;
+	display: inline-block;
+	text-align: right;
+}
+#graphList .summary .close span {
+	display: none
+}
+#graphList .content {
+	padding-top: 25px;
+	font-size: 80%;
+	color: #666666;
+}
+#graphList .sidebar h2 {
+	padding-top: 20px
+}
+#graphList .sidebar ul {
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+}
+#graphList .sidebar li a {
+	color: #666666 ! important
+}
+#graphList .notes {
+	margin-left: 25px;
+	float: left;
+	width: 600px
+}
+#graphList .notes p {
+	line-height: 1.5em;
+	padding-top: 20px
+}
+.communityMessage {
+	padding-bottom: 1em;
+}
+.discussHeader {
+	padding-top: 12px;
+	margin-left: 15px;
+}
+
+body.load-graph #graphList .summary h2 {
+	width: 485px
+}
+body.load-graph #graphList .summary .preview {
+	width: 60px;
+}
+body.load-graph #graphList .summary .update {
+	width: 68px;
+}
+body.load-graph #graphList .summary .close {
+	width: 21px;
 }
