--- a/www/css/mobile/trackPage.css
+++ b/www/css/mobile/trackPage.css
@@ -396,3 +396,5 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 	padding-left: 1px;
 	padding-top: 2px;
 }
+
+}
